remove navigation bar in login page

--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="#" class="logo">Online Shopping</a>
-       <ul class="nav-links">
-  <li><a href="#" id="home-link">Home</a></li>
-  <li><a href="#" id="shop-link">Shop</a></li>
-  <li><a href="#" id="cart-link">Cart</a></li>
-  <li><a href="#" id="logout-link">Logout</a></li>
-</ul>
-      </nav>
+   <nav class="navbar">
+    <a href="#" class="logo">Online Shopping</a>
+    <ul class="nav-links" id="nav-links"> <!-- ← Add this id -->
+        <li><a href="#" id="home-link">Home</a></li>
+        <li><a href="#" id="shop-link">Shop</a></li>
+        <li><a href="#" id="cart-link">Cart</a></li>
+        <li><a href="#" id="logout-link">Logout</a></li>
+    </ul>
+</nav>
+
     <div class="container">
 
         <!-- Login Section -->
