--- a/index.html
+++ b/index.html
@@ -20,18 +20,36 @@
     <div class="container">
 
         <!-- Login Section -->
-        <div id="login-section" class="section">
-            <h2>Login</h2>
-            <div class="input-group">
-                <label for="login-email">Email:</label>
-                <input type="email" id="login-email" placeholder="Enter Email">
-            </div>
-            <div class="input-group">
-                <label for="login-password">Password:</label>
-                <input type="password" id="login-password" placeholder="Enter Password">
-            </div>
-            <button id="login-btn" class="button">Login</button>
-        </div>
+        <!-- Login Section -->
+<div id="login-section" class="section">
+    <h2>Login</h2>
+    <div class="input-group">
+        <label for="login-email">Email:</label>
+        <input type="email" id="login-email" placeholder="Enter Email">
+    </div>
+    <div class="input-group">
+        <label for="login-password">Password:</label>
+        <input type="password" id="login-password" placeholder="Enter Password">
+    </div>
+    <button id="login-btn" class="button">Login</button>
+    <p>Don’t have an account? <a href="#" id="show-register">Sign Up</a></p>
+</div>
+
+<!-- Register Section -->
+<div id="register-section" class="section" style="display: none;">
+    <h2>Register</h2>
+    <div class="input-group">
+        <label for="register-email">Email:</label>
+        <input type="email" id="register-email" placeholder="Enter Email">
+    </div>
+    <div class="input-group">
+        <label for="register-password">Password:</label>
+        <input type="password" id="register-password" placeholder="Enter Password">
+    </div>
+    <button id="register-btn" class="button">Register</button>
+    <p>Already have an account? <a href="#" id="show-login">Login</a></p>
+</div>
+
 
       
         <div id="catalog-section" class="section" style="display:none;">
